--- a/Source/HomeAutomexWS/HomeAutomexWebApplication/HomeAutomexWebApplication.csproj
+++ b/Source/HomeAutomexWS/HomeAutomexWebApplication/HomeAutomexWebApplication.csproj
@@ -68,12 +68,16 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Global.asax" />
     <Content Include="HomeAutomexWS.asmx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Global.asax.cs">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
     <Compile Include="HomeAutomexWS.asmx.cs">
       <DependentUpon>HomeAutomexWS.asmx</DependentUpon>
       <SubType>Component</SubType>
