--- a/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Web.config
+++ b/Source/HomeAutomexWeb/HomeAutomex/HomeAutomex/Web.config
@@ -79,15 +79,28 @@
     </defaultConnectionFactory>
   </entityFramework>
   <system.serviceModel>
+    <behaviors>
+      <serviceBehaviors>
+        <behavior>
+          <serviceMetadata httpGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDiscovery />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
     <bindings>
       <basicHttpBinding>
         <binding name="HomeAutomexWSSoap" />
-        <binding name="HomeAutomexWSSoap1" />
+        <binding name="HomeAutomexWSSoap1" maxReceivedMessageSize="2147483647" />
       </basicHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost:54090/HomeAutomexWS.asmx" binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap" contract="HomeAutomexWS.HomeAutomexWSSoap" name="HomeAutomexWSSoap" />
-      <endpoint address="http://localhost:54090/HomeAutomexWS.asmx" binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap1" contract="HomeAutomexService.HomeAutomexWSSoap" name="HomeAutomexWSSoap1" />
+      <endpoint address="http://localhost:54090/HomeAutomexWS.asmx"
+        binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap"
+        contract="HomeAutomexWS.HomeAutomexWSSoap" name="HomeAutomexWSSoap" />
+      <endpoint address="http://localhost:8447/HomeAutomexWS.asmx"
+        binding="basicHttpBinding" bindingConfiguration="HomeAutomexWSSoap1"
+        contract="HomeAutomexService.HomeAutomexWSSoap" name="HomeAutomexWSSoap1" />
     </client>
   </system.serviceModel>
 </configuration>
