--- a/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/AndroidManifest.xml
+++ b/Source/HomeAutomexMobile/Projeto Final/HomeAutomex/AndroidManifest.xml
@@ -5,8 +5,8 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="17"
-        android:targetSdkVersion="17" />
+        android:minSdkVersion="16"
+        android:targetSdkVersion="16" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -22,7 +22,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/logo_homeautomex"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
